--- a/BotRetreat2018/BotRetreat2018.Wpf.Framework/Components/BusyIndicator.xaml
+++ b/BotRetreat2018/BotRetreat2018.Wpf.Framework/Components/BusyIndicator.xaml
@@ -5,8 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-    <Viewbox Width="{Binding Width, ElementName=BusyIndicator}" Height="{Binding Height, ElementName=BusyIndicator}"      
-        HorizontalAlignment="Center" VerticalAlignment="Center">
+    <Viewbox HorizontalAlignment="Center" VerticalAlignment="Center">
         <Grid Background="Transparent" ToolTip="Busy..." HorizontalAlignment="Center" VerticalAlignment="Center">
             <Canvas Name="Canvas1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center"         
          VerticalAlignment="Center" Width="120" Height="120">
